--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <!-- Load Esri Leaflet from CDN -->
+  <script src="https://unpkg.com/esri-leaflet@2.1.4"></script>
+  <!-- Load Esri Leaflet Renderers -->
+  <!-- This will hook into Esri Leaflet to get renderer info when adding a feature layer -->
+  <script src="https://unpkg.com/esri-leaflet-renderers@2.0.6"></script>
 </head>
 
 <body>
